# kon

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-and-lint.yml  release.yml
scripts/: update-homebrew.sh
src/: main.rs
