[package]
name = "kon"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Display fox image on CLI."
homepage = "https://github.com/Doarakko/kon"
repository = "https://github.com/Doarakko/kon"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viuer = "0.6.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
image = "0.24.5"
